name:           hack-translator
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
  default-language: Haskell2010
  default-extensions: DataKinds,
                      DuplicateRecordFields,
                      FlexibleContexts,
                      GADTs,
                      KindSignatures,
                      LambdaCase,
                      NamedFieldPuns,
                      PolyKinds,
                      RankNTypes,
                      ScopedTypeVariables,
                      TypeApplications,
                      TypeFamilies,
                      TypeOperators,
                      TemplateHaskell
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
               -fplugin=Polysemy.Plugin -flate-specialise -fspecialise-aggressively
  hs-source-dirs:
      lib
  exposed-modules:
    VM.Parser
    VM.Processing
    VM.Types
    Assembly.Parser
    Assembly.Linker
    Assembly.Types
    Assembly.Render
    Hack.Compilation
    Hack.Decompilation
    Hack.Common
    Common
    Common.Parser
    Common.Types
    REPL
    Emul.CPU
  build-depends:
      base
    , containers, array
    , megaparsec, binary
    , bytestring
    , polysemy, polysemy-plugin
    , ansi-terminal

executable hackc
  default-language: Haskell2010
  default-extensions: DuplicateRecordFields,
                      NamedFieldPuns,
                      LambdaCase,
                      TypeOperators,
                      GADTs,
                      DataKinds,
                      FlexibleContexts
  ghc-options: -Wall -threaded
  main-is: Main.hs
  other-modules:
    Print
  hs-source-dirs:
    src

  build-depends:
      base
    , hack-translator
    , ansi-terminal
    , repline

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options: -Wall
  default-language: Haskell2010
  hs-source-dirs: tests
  other-modules:
    AssemblySpec
    VMSpec
    CPUEmulSpec
  build-depends:
      base
    , megaparsec
    , hspec
    , hack-translator
